macros/tests/fail/missing_arg.rs
fn main() {
    sqlm_macros::sql!("foo{} {}", "bar");
}
